--- a/index.html
+++ b/index.html
@@ -17,26 +17,52 @@
 <body>
     <section class="heder">
         <div class="container">
-            <nav class="navbr navbar-expnaded-lg pl-0 pr-0">
+            <nav class="navbar navbar-expand-lg pl-0 pr-0">
                 <a class="navbar-brand" href="#">
                     <img src="./img/logo.png" width="160" class="img-logo">
                 </a>
+                <button class="navbar-toggler" type="button" data-toggle="collape" data-target="#navbarNavDropdown">
+                    <span class="navbar-toggler-icon">
+                        <i class="fas fa-bars"></i>
+                    </span>
+                </button>
+                <div class="collapse navbar-collapse" id="#navbarNavDropdown">
+                    <ul class="navbar-nav ml-auto mr-auto">
+                        <li class="nav-item">
+                            <a href="#reservas" class="nav-link"><b>Reservas</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#servicos" class="nav-link"><b>Serviços</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#cardapio" class="nav-link"><b>Cardápio</b></a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="#depoimentos" class="nav-link"><b>Depoimentos</b></a>
+                        </li>
+                    </ul>
+                    <a class="btn btn-white btn-icon">Meu Carrinho
+                        <span class="icon">
+                            <i class="fa fa-shopping-bag"></i>
+                        </span>
+                    </a>
+                </div>
             </nav>
         </div>
     </section>
     <section class="banner">
 
     </section>
-    <section class="servicos">
+    <section class="servicos" id="servicos">
 
     </section>
-    <section class="cardapio">
+    <section class="cardapio" id="cardapio">
 
     </section>
-    <section class="depoimentos">
+    <section class="depoimentos" id="depoimentos">
 
     </section>
-    <section class="reserva">
+    <section class="reserva" id="reservas">
 
     </section>
     <footer>
