Adiconado links redes sociais

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <section class="heder">
+    <section class="header">
         <div class="container">
             <nav class="navbar navbar-expand-lg pl-0 pr-0">
                 <a class="navbar-brand" href="#">
@@ -50,18 +50,58 @@
             </nav>
         </div>
     </section>
-    <section class="banner">
 
+    <section class="banner">
+        <div class="container">
+            <div class="row">
+                <div class="col-6">
+                    <div class="d-flex text-banner">
+                        <h1><b>Escolha a sua comida <b class="color-primary">favorita.</b></b></h1>
+                        <p>
+                            Aproveite nosso cardápio! Escolha o que desejar e receba em sua casa de forma rápida e
+                            segura.
+                        </p>
+                        <div>
+                            <a class="btn btn-yellow mt-4 mr-3">
+                                Ver cardápio
+                            </a>
+                            <a href="#" class="btn btn-white btn-icon-left mt-4">
+                                <span class="icon-left">
+                                    <i class="fa fa-phone"> </i>
+                                </span>
+                                (17) 99168-6069
+                            </a>
+                        </div>
+                    </div>
+                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                    <a class="btn btn-sm btn-white btn-social mt-4 mr-3">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a class="btn btn-sm btn-white btn-social mt-4">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                </div>
+                <div class="col-6">
+                    teste
+                </div>
+            </div>
+        </div>
     </section>
+
     <section class="servicos" id="servicos">
 
     </section>
+
     <section class="cardapio" id="cardapio">
 
     </section>
+
     <section class="depoimentos" id="depoimentos">
 
     </section>
+
     <section class="reserva" id="reservas">
 
     </section>
