--- a/index.html
+++ b/index.html
@@ -84,7 +84,18 @@
                     </a>
                 </div>
                 <div class="col-6">
-                    teste
+                    <div class="card-banner"></div>
+                    <div class="d-flex img-banner">
+                        <img src="./img/burguer.png">
+                    </div>
+                    <div class="card card-case">
+                        "Entrega rápida e funcinónários simpáticos".
+                        <br>A comida chegou quente e <br>
+                        muito saborosa!"
+                        <span class="card-case-name">
+                            <b>Thiago Lopes</b>
+                        </span>
+                    </div>
                 </div>
             </div>
         </div>
